@@ -65,6 +65,7 @@
 #include "xpm/descent3.xpm"
 #include "xpm/ut2.xpm"
 #include "xpm/ut2004.xpm"
+#include "xpm/netp.xpm"
 
 #include "xpm/gamespy3d.xpm"
 #include "xpm/ssam.xpm"
