@@ -53,3 +53,14 @@ gametype WOETM new extend Q3M
     master query = empty full demo
 end
 
+# NetPanzer > 0.1.6
+gametype NETP new extend GPS
+    name = NetPanzer
+    template var = NETPANZER
+end
+gametype NETPM new extend GSM
+    name = NetPanzer Master
+    template var = NETPANZERMASTER
+    master for gametype = NETP
+end
+
