@@ -1,0 +1,36 @@
+/* XPM */
+static char * netp_xpm[] = {
+"16 16 17 1",
+" 	c None",
+".	c #1B120B",
+"+	c #1D2B1A",
+"@	c #1A2D27",
+"#	c #274226",
+"$	c #2F403A",
+"%	c #3F4F38",
+"&	c #365437",
+"*	c #3A5143",
+"=	c #414D47",
+"-	c #475A53",
+";	c #436242",
+">	c #46634C",
+",	c #4D6B4C",
+"'	c #55785C",
+")	c #5F8668",
+"!	c #FEFFFC",
+"                ",
+"                ",
+"     ;%         ",
+"   ;&=>';,      ",
+"   >;%>#=&;;    ",
+" =;=>@&;,$;%'   ",
+"+>,-**#.>*;>=;  ",
+"@*'##&@;;==;,;; ",
+" .*$&#&;;,,>>,&,",
+"  @$#&,;;')*=>,&",
+"    +*&%%))')>  ",
+"    ;;$*#%-')   ",
+"   &;  @@$>-+   ",
+"  ,;     +$     ",
+"                ",
+"                "};
