@@ -124,8 +124,9 @@ enum server_type {
   COD_SERVER,
   SAS_SERVER,
   BF1942_SERVER,
-  GPS_SERVER,
   JK3_SERVER,
+  NETP_SERVER,
+  GPS_SERVER,
   UNKNOWN_SERVER
 };
 
